--- a/Frontend/dashboard/public/index.html
+++ b/Frontend/dashboard/public/index.html
@@ -6,11 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>React App</title>
 		<script>
-			window.id = "{{id}}";
 			window.money = "{{money}}";
 		</script>
 	</head>
-	<body>
+	<body
+		style="
+			font-family: Arial, Helvetica, sans-serif;
+			background-color: #eff1f3;
+			color: #272727;
+		"
+	>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
