added delete feature

--- a/Frontend/dashboard/public/index.html
+++ b/Frontend/dashboard/public/index.html
@@ -7,6 +7,8 @@
 		<title>React App</title>
 		<script>
 			window.money = "{{money}}";
+			window.quota = "{{quota}}";
+			window.currency = "{{currency}}";
 		</script>
 	</head>
 	<body
