--- a/Frontend/dashboard/public/index.html
+++ b/Frontend/dashboard/public/index.html
@@ -16,6 +16,7 @@
 			font-family: Arial, Helvetica, sans-serif;
 			background-color: #eff1f3;
 			color: #272727;
+			padding: 1rem;
 		"
 	>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
