--- a/Frontend/login/public/index.html
+++ b/Frontend/login/public/index.html
@@ -6,7 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>React App</title>
 	</head>
-	<body>
+	<body
+		style="
+			font-family: Arial, Helvetica, sans-serif;
+			background-color: #eff1f3;
+			color: #272727;
+		"
+	>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
