--- a/Frontend/dashboard/public/index.html
+++ b/Frontend/dashboard/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>React App</title>
+		<title>SaveBase</title>
 		<script>
 			window.money = "{{money}}";
 			window.quota = "{{quota}}";
