--- a/Frontend/login/public/index.html
+++ b/Frontend/login/public/index.html
@@ -4,13 +4,14 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>React App</title>
+		<title>SaveBase</title>
 	</head>
 	<body
 		style="
 			font-family: Arial, Helvetica, sans-serif;
 			background-color: #eff1f3;
 			color: #272727;
+			padding: 1rem;
 		"
 	>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
